# AnnotationPlatform

./: .gitignore  InstallationGuide.docx  LICENSE  README.md
cli/: README.md  assign_task.py  cli_interactive.py  cli_notebook.ipynb  liv4dcli.py  pyproject.toml  setup.py
cli/cli_api/: __init__.py  annotation.py  config.py  entity_api.py  image.py  server.py  submission_event.py  task.py  task_type.py  user.py  widget.py
cli/cli_api/archive/: biomarker_type.py  preprocessing.py  preprocessing_type.py  task_type.py  utils.py
cli/cli_api/utilities/: class_attribute.py  collections.py  image.py  json_template.py  utils.py
cli/commands/: __init__.py  image.py  revision.py  task.py  task_type.py  utils.py
cli/examples/: DownloadNotebook.ipynb  assign_task.py  cli_interactive.py  cli_notebook.ipynb  clinician_stats.py  download_biomarkers.py  update_biomarker.py
cli/src/liv4dcli/: __init__.py  image.py  image_type.py  liv4dcli.py  revision.py  task.py  utils.py
client/: .gitignore  README.md  angular.json  package.json  proxy.config.json  tsconfig.app.json  tsconfig.json  tslint.json  variables.scss
client/src/: index.html  main.ts  src.udb  styles.scss  variables.scss
client/ssl/: server.crt  server.key
common/: interfaces.ts  package.json
common_interfaces/: interfaces.ts
documentation/: 101guide.odg  InstallationGuide.docx
scripts/: assign_task.py  clinician_stats.py  download_biomarkers.py  populate.py  thumbnails.py  update_biomarker.py
server/: old-win-compatible-package.json  package.json  tsconfig.json  tslint.json
server/api/: app.ts  (+1 more)
(+676 files in other folders)
