[project]

name = "liv4dcli"
version = '1.0.0'
authors = [
    {name= 'Gabriel Lepetit-Aimon', email= 'gabriel.lepetit-aimon@polymtl.ca'},
]
description = """Python CLI to manage the LIV4D Web annotation platform."""
# readme = 'README.md'

requires-python = '>=3.6'
dependencies = [
    'numpy',
    'click',
    'requests',
    'ipython',
    'opencv-python-headless',
]

[project.urls]
Homepage = 'https://github.com/LIV4D/AnnotationPlatform'
Source = 'https://github.com/LIV4D/AnnotationPlatform'


[build-system]
requires = ["wheel", "setuptools", "Cython~=3.0.0b3", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B", "I"]
line-length = 120

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.isort]
known-first-party = ["fundus_vessels_toolkit"]
section-order = ["future", "standard-library", "third-party", "steered_cnn", "first-party", "local-folder"]

[tool.ruff.isort.sections]
"steered_cnn" = ["steered_cnn"]